fixed overlapping issue in modal

--- a/src/components/Modal/ModalLogout/modallogout.css
+++ b/src/components/Modal/ModalLogout/modallogout.css
@@ -7,12 +7,12 @@
   right: 0;
   bottom: 0;
   position: fixed;
+  z-index: 2;
 }
 
 .overlay-logout {
   background: rgba(49, 49, 49, 0.8);
   backdrop-filter: blur(4px);
-  z-index: 3;
 }
 .modal-content-logout {
   position: absolute;
@@ -33,7 +33,6 @@
   font-size: 2rem;
   font-weight: 600;
   color: var(--color-white);
-  z-index: 3;
 }
 
 .close-modal-logout {
